# packed_dsl

./: Cargo.toml  IDEAS.md  README.md
experiments/: Cargo.toml
experiments/src/: lib.rs
macros/: Cargo.toml
macros/src/: enum_derive.rs  lib.rs  struct_derive.rs  utils.rs
src/: dsl_string.rs  hash.rs  lib.rs  proto.rs
src/proto_impl/: arrays.rs  mod.rs  numeric.rs  slices.rs  str.rs  string.rs
src/tests/: hash_collisions.rs  mod.rs
