[package]
name = "packed_dsl"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["experiments","macros"]

[features]
default = ["std"]
std = ["bitstream-io/std", "arrayvec/std", "no_std_io2/std"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitstream-io = { version = "4.10.0", default-features = false }
packed_dsl_macros = { path = "macros", version = "0.1.0" }
no_std_io2 = { version = "0.9", default-features = false }
